<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_acocunt_id"
    android:background="@drawable/gradient_animation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_account_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/accot_create_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/acct_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acct_name_hint"
            android:textColorHint="@android:color/white"
            android:inputType="textPersonName"
            android:maxLines="1" />


        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@android:color/white"
            android:paddingTop="12dp" />

        <EditText
            android:id="@+id/password_acocunt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            android:maxLines="1" />

        <Button
            android:id="@+id/email_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/create_account_button_text" />

    </LinearLayout>


</LinearLayout>